<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:tools="http://schemas.android.com/tools"
      tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
                android:id="@+id/nav_dictionary"
                android:icon="@drawable/ic_translate_black_24dp"
                android:title="@string/menu_dictionary"/>
        <item
                android:id="@+id/nav_favorite"
                android:icon="@drawable/ic_bookmark_black_24dp"
                android:title="@string/menu_favorite"/>
        <item
                android:id="@+id/nav_history"
                android:icon="@drawable/ic_history_black_24dp"
                android:title="@string/menu_history"/>
    </group>

    <group android:id="@+id/menu_bottom" android:checkableBehavior="none">
        <item
                android:id="@+id/nav_settings"
                android:icon="@drawable/ic_settings_black_24dp"
                android:title="@string/menu_settings"/>
        <item
                android:id="@+id/nav_about"
                android:icon="@drawable/ic_info_black_24dp"
                android:title="@string/menu_about"/>
    </group>

</menu>
